# Vault-rs

./: .env.example  Cargo.toml  Dockerfile  README.md  TESTING_ROADMAP.md  VaultRS_Project_Bible.xlsx  claude-vaultrs.md  docker-compose.yml  password-manager.md
postman/: RustVault.postman_collection.json  RustVault.postman_environment.json
src/: lib.rs  main.rs  routes.rs  state.rs
src/config/: settings.rs
src/crypto/: aes_gcm.rs  argon2.rs  hkdf.rs  mod.rs  password_generator.rs  rsa.rs
src/dto/: auth_dto.rs  common_dto.rs  folder_dto.rs  mod.rs  vault_dto.rs
src/errors/: app_error.rs
src/handlers/: auth_handler.rs  folder_handler.rs  health_handler.rs  mod.rs  tools_handler.rs  vault_handler.rs
src/middleware/: auth.rs  mod.rs  request_id.rs  security_headers.rs
src/models/: audit_log.rs  collection.rs  folder.rs  idempotency.rs  mod.rs  org_member.rs  organization.rs  session.rs  user.rs  vault_item.rs
src/repositories/: audit_log_repo.rs  folder_repo.rs  idempotency_repo.rs  mod.rs  session_repo.rs  user_repo.rs  vault_item_repo.rs
src/services/: audit_service.rs  auth_service.rs  folder_service.rs  mod.rs  vault_service.rs
src/utils/: jwt.rs  validation.rs
tests/: auth_tests.rs  folder_tests.rs  health_tests.rs  tools_tests.rs  vault_tests.rs
tests/common/: mod.rs
