[package]
name = "vault-rs"
version = "0.1.0"
edition = "2024"
authors = ["Dhvani"]
description = "RustVault — A zero-knowledge, self-hosted password manager"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "set-header"] }
hyper = { version = "1.0" }
tokio = { version = "1", features = ["full"] }

# Database
mongodb = "3.2"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rand = "0.8"
rand_chacha = "0.3"

# JWT
jsonwebtoken = "9"

# TOTP
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Security
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

# Error handling
thiserror = "2"

# HTTP client (for HIBP breach check)
reqwest = { version = "0.12", features = ["json"] }

# Password generation
passwords = "3"

[dev-dependencies]
tokio-test = "0.4"
http-body-util = "0.1"
